project-assessment-site/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-site
spec:
  selector:
    matchLabels:
      app: main-site
  replicas: 1
  template:
    metadata:
      labels:
        app: main-site
    spec:
      containers:
      - name: main-site
        image: abdul125/main-site:1
        ports:
        - containerPort: 80
