project-assessment-site/main-site-deployment.yaml
# https://kubernetes.io/docs/concepts/overview/working-with-objects/kubernetes-objects/
apiVersion: apps/v1 # 
kind: Deployment
metadata:
  name: main-site
spec:
  selector:
    matchLabels:
      app: main-site
  replicas: 1
  template:
    metadata:
      labels:
        app: main-site
    spec:
      containers:
      - name: main-site
        image: abdul125/main-site
        ports:
        - containerPort: 80
