project-assessment-site/main-site-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-site-service
  labels:
    app: main-site
spec:
  ports:
  - port: 80
  selector:
    app: main-site
