project-assessment-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-site
  namespace:test
  labels:
    app: main-site
spec:
  ports:
  - protocol: TCP 
    port: 80
  selector:
    app: main-site
